syntax = "proto3";

package nat;

/* NAT44 global config */
message Nat44Global {
    bool forwarding = 1;                        /* Enable/disable forwarding. */

    message Interface {                         /* Local network interfaces enabled for NAT44. */
        string name = 1;                        /* (logical) Interface name. */
        bool is_inside = 2;                     /* Distinguish between inside/outside interface. */
        bool output_feature = 3;                /* Enable/disable output feature. */
    }
    repeated Interface nat_interfaces = 2;

    message Address {
        string address = 1;                     /* IPv4 address. */
        uint32 vrf_id = 2;                      /* VRF (table) ID. */
        bool twice_nat = 3;                     /* Enable/disable twice NAT. */
    }
    repeated Address address_pool = 3;

    VirtualReassembly virtual_reassembly = 4;   /* Virtual reassembly for IPv4 */
}

/* A grouping of one-to-many IPv4->IPv4 (Destination-NAT44) mappings */
message DNat44 {
    string label = 1;                        /* Unique identifier for the DNAT configuration. */

    enum Protocol {                          /* Available protocols. */
        TCP = 0;
        UDP = 1;
        ICMP = 2;                            /* ICMP is not permitted for load balanced entries. */
    };

    message StaticMapping {                  /* A list of static mappings in DNAT. */
        string external_interface = 1;       /* Interface to use external IP from; preferred over external_ip. */
        string external_ip = 2;              /* External address.  */
        bool external_ip_from_pool = 3;      /* Set to true if external_ip is expected to be in the NAT address pool */
        uint32 external_port = 4;            /* Port (do not set for address-only mapping). */

        message LocalIP {
            uint32 vrf_id = 1;               /* VRF (table) ID. */
            string local_ip = 2;             /* Local IP address). */
            uint32 local_port = 3;           /* port (do not set for address mapping). */
            uint32 probability = 4;          /* Probability mode. */
        }
        repeated LocalIP local_ips = 5;      /* List of local IP addresses. If there is more than one entry,
                                                Load ballancer is enabled. */
        Protocol protocol = 6;               /* Protocol used for static mapping. */

        enum TwiceNatMode {                  /* Available twice-NAT modes */
            DISABLED = 0;
            ENABLED = 1;
            SELF = 2;
        };
        TwiceNatMode twice_nat = 7;          /* Enable/disable (self-)twice NAT. */
    }
    repeated StaticMapping st_mappings = 2;

    message IdentityMapping {                /* A list of identity mappings in DNAT. */
        uint32 vrf_id = 1;                   /* VRF (table) ID. */
        string interface = 2;                /* Name of the interface to use address from; preferred over ip_address. */
        string ip_address = 3;               /* IP address. */
        bool ip_address_from_pool = 4;       /* Set to true if ip_address is expected to be in the NAT address pool */
        uint32 port = 5;                     /* Port (do not set for address-only mapping). */
        Protocol protocol = 6;               /* Protocol used for identity mapping. */

    }
    repeated IdentityMapping id_mappings = 3;
}

/* VirtualReassembly is defined in the global scope to be re-used for NAT64 and NAT66 */
message VirtualReassembly {                 /* NAT virtual reassembly */
    uint32 timeout = 1;                     /* Reassembly timeout */
    uint32 max_reassemblies = 2;            /* Maximum number of concurrent reassemblies */
    uint32 max_fragments = 3;               /* Maximum number of fragments per reassembly */
    bool drop_fragments = 4;                /* If set to true fragments are dropped, translated otherwise*/
}
